# python-framework

./: run_this
py-framework-docker/: Dockerfile  build  docker-compose.yml
py-framework-poet/: pyproject.toml
py-framework-venv/: pyvenv.cfg
py-framework-venv/Scripts/: activate  activate.bat
